# assessment-asset-lab

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: auth.rs  error.rs  main.rs  state.rs
backend/src/handlers/: mod.rs  upload.rs  video.rs
frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: router.ts
frontend/src/lib/atoms/: ErrorMessage.svelte
frontend/src/lib/constants/: api.ts  video.ts
frontend/src/lib/organisms/: VideoUploadSection.svelte
frontend/src/lib/pages/: UploadPage.svelte  WatchPage.svelte
worker/: .gitignore  Cargo.toml  Dockerfile
worker/src/: main.rs
