[package]
name = "assetlab-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
aws-config = "1"
aws-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.7", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
